# IVHD

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: publish_docs.yml  publish_to_pypi.yml
docs/: conf.py
docs/modules/: classes.rst
examples/: distance_example.ipynb  example.py  examples.ipynb  fmnist_examples.ipynb  mnist_examples.ipynb  precomputedNN_examples.ipynb
ivhd/: __init__.py  ivhd.py  ivhd_grad.py  test.py
tests/ivhd/: test_ivhd.py  test_ivhdgrad.py  utils.py
