[tool.poetry]
name = "ivhd"
version = "0.1.0"
description = "A fast and simple algorithm for embedding large and high-dimensional data"
authors = ["mjste <mj.stefanik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
